Removed randome c and added styles for cadets

--- a/app/views/shared/_fixed_back_end_nav.html.erb
+++ b/app/views/shared/_fixed_back_end_nav.html.erb
@@ -1,4 +1,4 @@
-c<div class="row">
+<div class="row">
     <div class="span3" id="backendlogomaster"><%= image_tag "masterbackend-01.png"%></div>
     <!--
       <div class="span3 offset4" id="backend-search">
