--- a/app/views/layouts/cadets.html.erb
+++ b/app/views/layouts/cadets.html.erb
@@ -8,8 +8,9 @@
 <html>
 <head>
 	<title>CannaPages</title>
-	<%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "cadets", :media => "all" %>
+	<%= stylesheet_link_tag  "application", :media => "all" %>
+  <%= stylesheet_link_tag  "cadets", :media => "all" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
