--- a/app/views/volumes/show.html.erb
+++ b/app/views/volumes/show.html.erb
@@ -4,7 +4,7 @@
         <div class="span2">
             <div class="cbnewstopicon"><%= image_tag "dispatches.png" %></div>
         </div>
-        <div class="span7">
+        <div class="span7 offset1">
             <div class="cbdispatchtext"><%= image_tag "dispatchestext-01.png" %></div>
         </div>
     </div>
