--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,8 +1,28 @@
 @charset "UTF-8";
 
+#featured-thumb {
+	margin-left: 1em;
+	margin-top: 1em;
+}
+
+#featuredlist-button {
+	margin-top: 3em;
+}
+
+#featured-rating {
+	margin-top: 1em;
+}
+
 #home-content {
-	background-color: rgba(256,256,256,.7);
+	background-color: rgba(256,256,256,.5);
 	padding-top: 20px;
+	box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.31);
+	-webkit-box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.31);
+	-moz-box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.31);
+}
+
+#header {
+	margin-top: 20px;
 }
 
 form {
@@ -22,6 +42,7 @@ form {
 }
 
 .featured-listingbox{
+	margin-top: 10px;
 	padding: .5em;
 	color: white;
 	-webkit-border-radius: 10px;
@@ -36,6 +57,7 @@ form {
 	background: linear-gradient(to bottom,  rgba(0,96,18,1) 0%,rgba(75,175,99,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006012', endColorstr='#4baf63',GradientType=0 ); /* IE6-9 */
 	border: 6px solid rgb(0,96,18);
+	margin-left: 10px;
 }
 
 .listingbox{
@@ -50,7 +72,10 @@ form {
 	background: -ms-linear-gradient(top, rgba(158,198,149,1) 0%,rgba(181,199,177,0.3) 100%); /* IE10+ */
 	background: linear-gradient(to bottom, rgba(158,198,149,1) 0%,rgba(181,199,177,0.3) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9ec695', endColorstr='#4db5c7b1',GradientType=0 ); /* IE6-9 */
-	border: 6px solid rgb(158,198,149)
+	border: 6px solid rgb(158,198,149);
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 10px;
 }
 
 #featuredlisting-info{
@@ -61,6 +86,8 @@ form {
 	h2{
 		font-size: 1.5em;
 	}
+	margin-left: -20px;
+	margin-right: 30px;
 }
 
 /* CSS Document */
@@ -781,6 +808,16 @@ old.spin div:hover{
     margin-top:20px;
 }
 
+.listbtn {
+	float:right;
+	margin-right:60px;
+	margin-top: 28px;
+}
+
+.listingicons {
+	margin-top: 20px;
+}
+
 #mapfill{
     color: white;
     background: transparent;
@@ -1373,7 +1410,7 @@ a:hover{
 
 #saverspace{
     
-    margin-left: 2em;
+    margin-left: 1.2em;
     
     a{
         z-index: -3;
