--- a/app/views/dispensaries/_featured.html.erb
+++ b/app/views/dispensaries/_featured.html.erb
@@ -1,15 +1,14 @@
 <div class="featured-listingbox row">
-	<div class="span12">
-		<div class="span2" id="featured-thumb">
-			<img src="http://placehold.it/170x170">	
-		</div>
-		<%= render "shared/five_star", on: dispensary.average_rating, dispensary: dispensary %>
-		<div class="span6" id="featuredlisting-info">
+	<div class="span8">
+			<div class="span3" id="featuredlisting-info">
 			<h1><%= dispensary.short_name %></h1>
 			<h2><%= dispensary.phone_number %></h2>
 			<h2><%= dispensary.street_address %></h2>
 			<h2><%= dispensary.city_state_zip %></h2>
-			<button class="btn btn-large" id="featuredlist-button">See Full Listing</button>
+		</div>
+		<%= render "shared/five_star_featured", on: dispensary.average_rating, dispensary: dispensary %>
+			<div class="span2" id="featured-thumb">
+			<img src="http://placehold.it/170x170">	
 		</div>
 	</div>
 </div>
