Home page modals and user creation complete

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+#cadethelptab {
+	margin-left: 41px;
+}
+
 #featured-thumb {
 	margin-left: 1em;
 	margin-top: 1em;
@@ -831,11 +835,13 @@ old.spin div:hover{
 
 .footerfill{
     background-color: #063;
-    background-repeat: repeat-x;
-    width: 110%;
-    height: 120px;
-    padding-top: 30px;
-    margin-top: 1em;
+    height: 70px;
+    margin-top: 25px;
+    margin-right: 0;
+    width: 98.1%;
+    border-radius: 0px 0px 7px 7px; 
+	-moz-border-radius: 0px 0px 7px 7px; 
+	-webkit-border-radius: 0px 0px 7px 7px; 
 }
     
 .cbdispatchtext {
