--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,4 @@
-<div class="row">
-    <div class="span12">
-        <div class="footerfill">
-            <h1>I am in the footer</h1>
-        </div>
-    </div>
-  </div
+<div class="row" id="footer">
+  <div class="span12 footerfill">
+  </div>
+</div>
