--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,5 +1,26 @@
 @charset "UTF-8";
 
+#single-dispensary {
+	padding-left: 40px;
+}
+
+#single-dispensary-inner-left{
+ margin-right: 10px;
+}
+
+#single-dispensary-inner-center{
+	margin-right: 10px;
+}
+
+
+
+a.modal-link {
+	color: #006012;
+	&hover {
+		text-decoration:underline;
+	}
+}
+
 #cadethelptab {
 	margin-left: 41px;
 }
@@ -1052,7 +1073,7 @@ a:hover{
 .subnav-fixed {
 	position: fixed;
 	top: 0;
-	left: 4.4em;
+	left: 174px;
 	.dropdown-menu {
 		margin: 0;
 	}
