--- a/app/views/modals/_login.html.erb
+++ b/app/views/modals/_login.html.erb
@@ -15,6 +15,9 @@
           <%= password_field_tag :password %>
         </div>
     </p>
+    <p>Not a member?</p>
+    <p><%= link_to "Join", "#create_user_modal", class: "modal-link", "data-toggle" => :modal %> </p>
+    <p><%= link_to "Find out more", "#cadets-help", class: "modal-link", "data-toggle" => :modal %></p>
   </div>
   <div class="modal-footer">
     <div class="actions"><%= submit_tag "Log In" %></div>
