--- a/app/views/dispensary_comments/_form.html.erb
+++ b/app/views/dispensary_comments/_form.html.erb
@@ -1,7 +1,6 @@
 <%= simple_form_for comment do |f| %>
     <%= f.input :body, :label => 'Comment' %>
-  <div class="modal-footer">
+    <%= f.hidden_field :dispensary_id, value: dispensary.id %>
     <a href="#" class="btn" data-dismiss="modal">Close</a>
     <%= f.button :submit %>
-  </div>
 <% end %>
