--- a/app/views/modals/_edit_user_dispensary_review.html.erb
+++ b/app/views/modals/_edit_user_dispensary_review.html.erb
@@ -4,6 +4,6 @@
           <h3>Edit Dispensary Review</h3>
       </div>
       <div class="modal-body">
-          <%= render "user_dispensary_reviews/form", review: review %>
+          <%= render "user_dispensary_reviews/form", review: review, dispensary: review.dispensary %>
       </div>
 </div>
