--- a/app/views/shared/_five_star.html.erb
+++ b/app/views/shared/_five_star.html.erb
@@ -9,4 +9,6 @@
     <i class="icon-star-empty icon-white"></i>
   <% end %>
 
+<p><%= "Based on #{dispensary.num_of_reviews} Reviews" %></p>
+
 </div>
