--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,11 +10,15 @@
   <%= @article.content %>
 </p>
 
-<p>
-  <b>Editorial:</b>
-  <%= @article.editorial %>
-</p>
+<p><b>Comments</b></p>
+<% @article_comments.each do |ac| %>
+  <%= render 'article_comments/comment', comment: ac %>
+<% end %>
 
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<p><b>Leave a comment</b></p>
+<%= gravatar_image_tag(current_user.email) %>
+<%= simple_form_for ArticleComment.new do |f| %>
+  <%= f.input :body, label: "Whats on your mind?" %>
+  <%= f.hidden_field :article_id, value: @article.id %>
+  <%= f.button :submit %>
+<% end %>
