--- a/app/views/dispensaries/_icons.html.erb
+++ b/app/views/dispensaries/_icons.html.erb
@@ -4,4 +4,6 @@
 			    <%= image_tag "menuicons-03.png" %>
 			    <%= image_tag "menuicons-04.png" %> 
 	    </div>
-	    <button class="span2 btn btn-large btn-success listbtn">See Full Listing</button>
+	    <button class="span2 btn btn-large btn-success listbtn">
+	    <%= link_to "See Full Listing", dispensary_path( dispensary ) %>
+	    </button>
