--- a/app/views/user_dispensary_reviews/_form.html.erb
+++ b/app/views/user_dispensary_reviews/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :bud_tenders, :collection => 1..10 %>
   <%= f.input :selection, :collection => 1..10 %>
   <%= f.input :atmosphere, :collection => 1..10 %>
-  <%= f.hidden_field :dispensary_id, value: review.dispensary_id %>
+  <%= f.hidden_field :dispensary_id, value: dispensary.id %>
   <div class="modal-footer">
     <a href="#" class="btn" data-dismiss="modal">Close</a>
     <%= f.button :submit %>
