--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,11 @@
+<div id="article-container">
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Title:</b>
+<h1>
   <%= @article.title %>
-</p>
+</h2>
 
 <p>
-  <b>Content:</b>
   <%= @article.content %>
 </p>
 
@@ -18,7 +17,8 @@
 <p><b>Leave a comment</b></p>
 <%= gravatar_image_tag(current_user.email) %>
 <%= simple_form_for ArticleComment.new do |f| %>
-  <%= f.input :body, label: "Whats on your mind?" %>
+<%= f.input :body, label: "Whats on your mind?", :input_html => { :cols => 100, :rows => 10, style: "width:960px;" } %>
   <%= f.hidden_field :article_id, value: @article.id %>
   <%= f.button :submit %>
 <% end %>
+</div>
