--- a/app/views/critiques/_form.html.erb
+++ b/app/views/critiques/_form.html.erb
@@ -3,6 +3,6 @@
     <%= f.input :content, :label => 'Content' %>
     <%= f.input :critique_type, :collection => ["dispensary", "strain"] %>
     <%= f.input :photo_url, label: "Headline Photo URL" %>
+    <%= f.button :submit, class: "btn-success" %>
     <a href="#" class="btn" data-dismiss="modal">Close</a>
-    <%= f.button :submit %>
 <% end %>
