--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,5 +1,74 @@
 @charset "UTF-8";
 
+/* RESET THE BITCH */
+
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+
+/******************************/
+
+#business-comments-header {
+	margin-bottom: 20px;
+}
+
+#single-dispensary-inner-left img {
+  margin-bottom: 20px;
+}
+
+#article-container {
+  padding-left: 20px;
+}
+
+#article-comment-body {
+	height:200px;
+}
+
+
 #single-dispensary {
 	padding-left: 40px;
 }
@@ -467,7 +536,7 @@ to { background-color: #1a9246; -moz-box-shadow: 0 0 9px #333; }
 }
 
 .homefeeds{
-    padding-top:36px;
+    padding-top:24px;
     img{
     -moz-box-shadow:0 3px 10px #888;
     -webkit-box-shadow:0 3px 10px #888;
@@ -939,7 +1008,7 @@ old.spin div:hover{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 0px 10px 10px 0px;
+    padding: 0px 10px 10px 10px;
     border-top-style:hidden;
     border-right-style:solid;
     border-color:rgb(226,226,226);
@@ -1502,11 +1571,13 @@ a:hover{
 
 .backendbtns .btn{
 	margin-top: .5em;
+	margin-bottom: 10px;
+  float: right;
 }
 
 .manage-single-review{
 	border-bottom: solid 1px;
-	border-color: rgb(226,226,226)
+	border-color: black;
 }
 
 .editnews{
@@ -1554,6 +1625,7 @@ a:hover{
 
 .articles-index {
 	color: black;
+	margin-left: 1em;
 	a {
 		color: black;
 	}
@@ -1561,6 +1633,8 @@ a:hover{
 
 .article-title {
 	font-size: 2em;
+  line-height:2em;
+  border-bottom:1px black solid;
 }
 
 .article-exerpt-container {
@@ -1596,4 +1670,18 @@ a:hover {
 	position: absolute;
 	left: 80em;
 	top: .3em;
+}
+
+.new-btn {
+	margin-bottom: 20px;
+}
+
+textarea {
+	width: 400px;
+  height: 200px;
+}
+
+.gravitar {
+	margin-right: 10px;
+  margin-bottom: 20px;
 }
