--- a/app/views/article_comments/_form.html.erb
+++ b/app/views/article_comments/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for comment do |f| %>
     <%= f.input :body, :label => 'Comment' %>
   <div class="modal-footer">
+    <%= f.button :submit, class: "btn-success" %>
     <a href="#" class="btn" data-dismiss="modal">Close</a>
-    <%= f.button :submit %>
   </div>
 <% end %>
