--- a/app/views/dispensaries/show.html.erb
+++ b/app/views/dispensaries/show.html.erb
@@ -1,12 +1,12 @@
 <div id="single-dispensary" class="row">
 
   <div class="span2" id="single-dispensary-inner-left">
-    <div class="row"><%= image_tag @dispensary.safe_photo_url, size: "150x150" %></div>
+    <div class="row"><%= image_tag @dispensary.safe_photo_url, size: "150x150", class: "business-avatar" %></div>
     <div class="row">
       <ul class="nav nav-pills nav-stacked" id="navalign">
           <li><%= link_to "View Map", @dispensary.map_link, target: "_blank" %></li>
           <li><%= link_to "Live Menu", "#no-menu", "data-toggle"=> :modal %></li>
-          <li><%= link_to "Write Review", "#createmodal", "data-toggle"=> :modal %></li>
+          <li><%= link_to "Rate Dispensary", "#createmodal", "data-toggle"=> :modal %></li>
           <li><%= link_to "Write Comment", "#createmodalcomment", "data-toggle"=> :modal %></li>
       </ul>
     </div>
@@ -26,7 +26,7 @@
 </div>
 
 <div class="span5"  id="single-dispensary-inner-right">
-    <h3>Commetns</h3>
+    <h3 id="business-comments-header">Comments</h3>
     <% @dispensary.dispensary_comments.reverse.each do |c| %>
       <%= render "dispensary_comments/comment", comment: c %>
     <% end %>
