--- a/app/views/modals/_cannasaver_placeholder.html.erb
+++ b/app/views/modals/_cannasaver_placeholder.html.erb
@@ -1,7 +1,7 @@
 <div id="cannasaver" class="modal hide fade" style="display: none;">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal">X</button>
-    <h3>Strain Wiki</h3>
+		<h3>CannaSaver</h3>
   </div>
   <div class="modal-body">
     <p>
