Fixed css and html issues

--- a/app/views/dispensaries/_featured.html.erb
+++ b/app/views/dispensaries/_featured.html.erb
@@ -8,7 +8,7 @@
 		</div>
 		<%= render "shared/five_star_featured", on: dispensary.average_rating, dispensary: dispensary %>
 			<div class="span2" id="featured-thumb">
-			<img src="http://placehold.it/170x170">	
+			<%= image_tag "http://placekitten.com/170/170" %>	
 		</div>
 	</div>
 </div>
