--- a/app/views/shared/_five_star_featured.html.erb
+++ b/app/views/shared/_five_star_featured.html.erb
@@ -12,7 +12,7 @@
   <h5>Fans: 20</h5>
   <h5>Last Updated: <%= dispensary.updated_at %></h5>
   
-		<button class="btn btn-large" id="featuredlist-button">
+		<button class="btn btn-large btn-success" id="featuredlist-button">
       <%= link_to "See Full Listing", dispensary_path( dispensary ) %>
 		</button>
 </div>
