--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,56 +1,16 @@
 @charset "UTF-8";
 
 /* RESET THE BITCH */
-
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-
-
-
+/* html5doctor.com Reset v1.6.1 - http://cssreset.com */
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}ins{background-color:#ff9;color:#000;text-decoration:none}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}input,select{vertical-align:middle}
 /******************************/
+
+
+.home-add-right {
+	margin:auto;
+	width: 250px;
+	padding-top: .7em;
+}
 
 #business-comments-header {
 	margin-bottom: 20px;
@@ -1232,10 +1192,9 @@ a:hover{
 
 #cannacarouseltop{
 	height:240px;
-	width: 620px;
-    	-moz-box-shadow:0 3px 10px #888;
+	margin-left: 20px;
+  -moz-box-shadow:0 3px 10px #888;
 	-webkit-box-shadow:0 3px 10px #888;
-
 }
 
 .listtitle{
@@ -1417,7 +1376,7 @@ a:hover{
     background-repeat: repeat-x;
 	background: url('/assets/headeroverlay-01.png');
 	background-color: #006012;
-	margin-top: .6em;
+	margin-top: 0em;
 	height: 200px;
 	-webkit-box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.31);
 	-moz-box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.31);
@@ -1523,9 +1482,10 @@ a:hover{
 }
 
 #cadettab a{
-    background-image: url('/assets/cadettab.png');
+/*    background-image: url('/assets/cadettab.png');
     color: #669966;
-    background-position-y: -19px;
+*/  
+  background-position-y: -19px;
     background-position-x: -2px;
 }
 
@@ -1684,4 +1644,8 @@ textarea {
 .gravitar {
 	margin-right: 10px;
   margin-bottom: 20px;
+}
+
+#tr-navbar {
+	height: 36px;
 }
