--- a/app/views/dispensaries/search.html.erb
+++ b/app/views/dispensaries/search.html.erb
@@ -1,9 +1,6 @@
 <div class="row">
-	<div class="span2">
-		<div class="cbnewstopicon"><%= image_tag "cannaenginetitle-02.png" %></div>
-	</div>
-	<div class="span7">
-		<div class="cbenginetext"><%= image_tag "cannaenginetitle-01.png" %></div>
+	<div class="span8">
+		<%= render "shared/banner" %>
   </div>
 </div>
 <div class="row">  
@@ -18,5 +15,11 @@
             <%= render "dispensaries/dispensary", dispensary: d %>
     <% end %>
   </div>
+	<div class="span4">
+		<div class="home-add-right"><%= image_tag "http://placekitten.com/250/250" %></div>
+		<div class="home-add-right"><%= image_tag "http://placekitten.com/250/250" %></div>
+		<div class="home-add-right"><%= image_tag "http://placekitten.com/250/250" %></div>
+		<div class="home-add-right"><%= image_tag "http://placekitten.com/250/250" %></div>
+	</div>
 </div>
 </div>
