--- a/app/views/dispensaries/_dispensary.html.erb
+++ b/app/views/dispensaries/_dispensary.html.erb
@@ -2,7 +2,7 @@
   <div class="span8">
     <div class="row">
 	    <div class="span2" id="listinglocation"><h5><%= dispensary.city_state_zip %></h5></div>
-	    <div class="span1 offset4" id="listdistance"><h5><%= dispensary.distance %> miles</h5></div>
+	    <div class="span1 offset4" id="listdistance"><h5>Apx <%= dispensary.distance %> miles</h5></div>
     </div>
     <div class="row">
         <h1 class="listingname"><%= dispensary.short_name %></h1>
